added document repository

--- a/AzureFunctionsCosmosDBSample/AzureFunctionsCosmosDBSample.csproj
+++ b/AzureFunctionsCosmosDBSample/AzureFunctionsCosmosDBSample.csproj
@@ -86,6 +86,12 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SupportingLibrary\SupportingLibrary.csproj">
+      <Project>{0fddaa66-62a1-4a7f-a675-d3b27c94993c}</Project>
+      <Name>SupportingLibrary</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
